[gd_scene load_steps=16 format=3 uid="uid://h45xpiy3k8b1"]

[ext_resource type="FontFile" uid="uid://d2wn54tmrjvkh" path="res://Assets/Fonts/Gupter-Bold.ttf" id="1_ba0eh"]
[ext_resource type="Script" path="res://Scripts/other/ship_type_menu.gd" id="2_tq12p"]
[ext_resource type="AudioStream" uid="uid://dk03ptv1w0bnx" path="res://Assets/Sound/SoundEffects/coins.wav" id="3_jvuys"]
[ext_resource type="AudioStream" uid="uid://brga7ic1u5y82" path="res://Assets/Sound/SoundEffects/CantBuy.wav" id="4_c2koy"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1_ba0eh")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxEmpty" id="2"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("1_ba0eh")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("1_ba0eh")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="8"]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color(0.415686, 0.415686, 0.415686, 1)
border_width_right = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id="9"]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color(0.886275, 0.298039, 0.0117647, 1)
border_blend = true

[sub_resource type="Theme" id="11"]
default_font = SubResource("10")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_color_disabled = Color(0.901961, 0.901961, 0.901961, 0.2)
Button/colors/font_color_hover = Color(1, 0.8, 0.109804, 1)
Button/colors/font_color_pressed = Color(0.886275, 0.298039, 0.0117647, 1)
Button/constants/h_separation = 2
Button/fonts/font = SubResource("1")
Button/styles/disabled = SubResource("2")
Button/styles/focus = SubResource("3")
Button/styles/hover = SubResource("4")
Button/styles/normal = SubResource("5")
Button/styles/pressed = SubResource("6")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_color_shadow = Color(0, 0, 0, 0)
Label/colors/font_outline_modulate = Color(1, 1, 1, 1)
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource("7")
Label/styles/normal = null
TabBar/colors/font_color_bg = Color(0.69, 0.69, 0.69, 1)
TabBar/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
TabBar/colors/font_color_fg = Color(0.94, 0.94, 0.94, 1)
TabBar/constants/h_separation = 4
TabBar/constants/label_valign_bg = 2
TabBar/constants/label_valign_fg = 0
TabBar/constants/top_margin = 24
TabBar/fonts/font = SubResource("10")
TabBar/icons/close = null
TabBar/icons/decrement = null
TabBar/icons/decrement_highlight = null
TabBar/icons/increment = null
TabBar/icons/increment_highlight = null
TabBar/styles/button = null
TabBar/styles/button_pressed = null
TabBar/styles/panel = null
TabBar/styles/tab_bg = null
TabBar/styles/tab_disabled = null
TabBar/styles/tab_fg = null
TabContainer/colors/font_color_bg = Color(1, 1, 1, 1)
TabContainer/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
TabContainer/colors/font_color_fg = Color(1, 1, 1, 1)
TabContainer/constants/h_separation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 0
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = SubResource("10")
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = SubResource("8")
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource("9")

[node name="shipTypeMenu" type="Popup"]
size = Vector2i(1000, 500)
visible = true
theme = SubResource("11")
script = ExtResource("2_tq12p")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="VideoSettings" type="GridContainer" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 558.0
offset_bottom = 239.0
theme_override_constants/v_separation = 20
columns = 2

[node name="ShipModel" type="Label" parent="VideoSettings"]
layout_mode = 2
size_flags_vertical = 1
text = "Ship Model"

[node name="ShipModelOptions" type="OptionButton" parent="VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 5
selected = 0
popup/item_0/text = "Dreb"
popup/item_0/id = 0
popup/item_1/text = "Blick"
popup/item_1/id = 1
popup/item_2/text = "Titan"
popup/item_2/id = 2
popup/item_3/text = "Sickle"
popup/item_3/id = 3
popup/item_4/text = "Scythe"
popup/item_4/id = 4

[node name="Stats" type="Label" parent="VideoSettings"]
layout_mode = 2
text = "Stats"

[node name="Control" type="Control" parent="VideoSettings"]
layout_mode = 2

[node name="Description" type="Label" parent="VideoSettings"]
layout_mode = 2
text = "Desciption"

[node name="Control2" type="Control" parent="VideoSettings"]
layout_mode = 2

[node name="BuyOrEquip" type="Button" parent="VideoSettings"]
layout_mode = 2
text = "Buy/Option"

[node name="BuySfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jvuys")
max_distance = 5000.0
bus = &"SFX"

[node name="CantAfford" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_c2koy")
max_distance = 5000.0
bus = &"SFX"

[connection signal="pressed" from="VideoSettings/BuyOrEquip" to="." method="_on_buy_or_equip_pressed"]
